changed header to use online versions of modules

--- a/healogix_mousetracking.html
+++ b/healogix_mousetracking.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="../packages/jspsych/dist/index.browser.js"></script>
-  <script src="../packages/plugin-html-button-response/dist/index.browser.js"></script>
-  <script src="../packages/extension-mouse-tracking/dist/index.browser.js"></script>
-  <link rel="stylesheet" href="../packages/jspsych/css/jspsych.css">
+  <!-- adding in modules used in this script  -->
+  <script src="https://unpkg.com/jspsych@7.3.4"></script>
+  <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
+  <script src="https://unpkg.com/@jspsych/extension-mouse-tracking@1.0.3"></script>
+
+  <!-- adding in jspsych's style sheet -->
+  <link
+  rel="stylesheet"
+  href="https://unpkg.com/jspsych@7.3.4/css/jspsych.css"
+  />
+
   <style>
     .jspsych-btn {margin-bottom: 10px;}
   </style>
