--- a/healogix_mousetracking.html
+++ b/healogix_mousetracking.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <!-- adding in modules used in this script  -->
-  <script src="https://unpkg.com/jspsych@7.3.4"></script>
-  <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0"></script>
+  <script src="https://unpkg.com/jspsych@7.3.4" type="text/javascript"></script>
+  <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.2.0" type="text/javascript"></script>
   <script src="https://unpkg.com/@jspsych/extension-mouse-tracking@1.0.3"></script>
 
   <!-- adding in jspsych's style sheet -->
@@ -24,19 +24,6 @@
       { type: jsPsychExtensionMouseTracking, params: {minimum_sample_time: 0} }
     ]
   });
-
-  
-
-  var show_data = {
-    type: jsPsychHtmlButtonResponse,
-    stimulus: function() {
-      var trial_data = jsPsych.data.get().filter({task: 'draw'}).last(1).values();
-      var trial_json = JSON.stringify(trial_data, null, 2);
-      return `<p style="margin-bottom:0px;"><strong>Trial data:</strong></p>
-        <pre style="margin-top:0px;text-align:left;">${trial_json}</pre>`;
-    },
-    choices: ['Repeat demo']
-  };
 
   var trial = {
     type: jsPsychHtmlButtonResponse,
@@ -81,7 +68,18 @@
     data: {
       task: 'replay'
     }
-  }
+  } 
+
+  var show_data = {
+    type: jsPsychHtmlButtonResponse,
+    stimulus: function() {
+      var trial_data = jsPsych.data.get().filter({task: 'draw'}).last(1).values();
+      var trial_json = JSON.stringify(trial_data, null, 2);
+      return `<p style="margin-bottom:0px;"><strong>Trial data:</strong></p>
+        <pre style="margin-top:0px;text-align:left;">${trial_json}</pre>`;
+    },
+    choices: ['Repeat demo']
+  };
 
   var trial_loop = {
     timeline: [trial, replay, show_data],
@@ -90,11 +88,7 @@
     }
   };
 
-  if (typeof jsPsych !== "undefined") {
-    jsPsych.run([start, trial_loop]);
-  } else {
-    document.body.innerHTML = '<div style="text-align:center; margin-top:50%; transform:translate(0,-50%);">You must be online to view the plugin demo.</div>';
-  }
+  jsPsych.run([trial_loop]);
 
 </script>
 
