added basic script structure

--- a/healogix_mousetracking.html
+++ b/healogix_mousetracking.html
@@ -19,6 +19,21 @@
 <body></body>
 <script>
 
+/* 
+  Parameters.
+  Edit these parameters to change aspects of how the experiment will run
+*/
+
+var param1 = ''
+var param2 = ''
+var param3 = ''
+
+/* 
+  Body of the Script
+  Do NOT edit below this line
+  See jspsyh website (https://www.jspsych.org/) for more information before editing below this line
+*/
+
   var jsPsych = initJsPsych({
     extensions: [
       { type: jsPsychExtensionMouseTracking, params: {minimum_sample_time: 0} }
