added local save of data

--- a/healogix_mousetracking.html
+++ b/healogix_mousetracking.html
@@ -41,7 +41,9 @@ var jsPsych = initJsPsych({
     })
 
     content = document.getElementById('jspsych-content');
-    Plotly.newPlot(content, trace);    
+    Plotly.newPlot(content, trace);
+
+    jsPsych.data.get().localSave('csv','mydata.csv');
 
   },
   extensions: [
